6957004: MethodComparator uses the wrong CP index accessor

Change two uses of get_index_u2 to get_index_u2_cpcache; also tweak some debugging print functions

Reviewed-by: kvn